syntax = "proto3";

option csharp_namespace = "eDoxa.Grpc.Protos.Games.Enums";

package edoxa.services.games;

enum EnumGame {
  ENUM_GAME_NONE = 0;
  ENUM_GAME_LEAGUE_OF_LEGENDS = 1;
  ENUM_GAME_SMITE = 2;
  ENUM_GAME_STAR_CRAFT_2 = 4;
  ENUM_GAME_DOTA_2 = 8;
  ENUM_GAME_CSGO = 16;
  ENUM_GAME_ROCKET_LEAGUE = 32;
  ENUM_GAME_OVERWATCH = 64;
  ENUM_GAME_FORTNITE = 128;
  ENUM_GAME_PUBG = 256;
  ENUM_GAME_ALL = -1;
}